// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyLocalizationForm handles changes 1`] = `
Array [
  "eng",
  Array [
    Object {
      "translations": Object {
        "body": "translated body",
        "subject": "translated subject",
      },
      "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
    },
  ],
]
`;

exports[`KeyLocalizationForm removes translations 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Send email
          </div>
          <div
            class="subtitle"
          />
        </div>
        <div
          data-use-vue-component-wrap=""
          style="all: unset;"
        >
          <div
            class="tab size-sm tabs"
            data-passed-props="[object Object]"
            data-v-69271fcc=""
          >
            <header
              class="tab-header"
              data-v-69271fcc=""
            >
              <ul
                class="tab-content"
                data-v-69271fcc=""
              >
                <li
                  class="tab-head tab-head--active"
                  data-v-69271fcc=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-69271fcc=""
                    style="all: unset;"
                  >
                    General
                  </div>
                </li>
                <li
                  class="tab-head"
                  data-v-69271fcc=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-69271fcc=""
                    style="all: unset;"
                  >
                    Body Translation
                  </div>
                </li>
              </ul>
            </header>
            <main
              class="tab-body"
              data-v-69271fcc=""
            >
              <div
                class="tab-panel"
                data-v-69271fcc=""
              />
            </main>
          </div>
        </div>
      </div>
      <div
        class="content"
      >
        <div>
          <div
            data-spec="translation-container"
          >
            <div
              class="translate_from"
              data-spec="text-to-translate"
            >
              New Sign Up
            </div>
          </div>
          <div>
            <div
              class="completion_wrapper"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-text-area sm normal textarea"
                  data-passed-props="[object Object]"
                  data-testid="Subject"
                  data-v-2f3d79bf=""
                >
                  <!---->
                  <textarea
                    data-v-2f3d79bf=""
                    placeholder="Spanish Translation"
                  />
                  <!---->
                  <!---->
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_completion_options_Subject"
                id=""
                style="margin-top: 1px; width: -24px; display: none;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--tertiary"
                  data-passed-props="[object Object]"
                  data-v-3b3aa28c=""
                  style="margin-left: 0px; margin-top: 0px; margin-right: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-3b3aa28c=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--primary"
                  data-passed-props="[object Object]"
                  data-v-3b3aa28c=""
                  style="margin-top: 0px; margin-right: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-3b3aa28c=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`KeyLocalizationForm removes translations 2`] = `
Array [
  "spa",
  Array [
    Object {
      "translations": Object {},
      "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
    },
  ],
]
`;

exports[`KeyLocalizationForm renders send email 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Send email
          </div>
          <div
            class="subtitle"
          />
        </div>
        <div
          data-use-vue-component-wrap=""
          style="all: unset;"
        >
          <div
            class="tab size-sm tabs"
            data-passed-props="[object Object]"
            data-v-69271fcc=""
          >
            <header
              class="tab-header"
              data-v-69271fcc=""
            >
              <ul
                class="tab-content"
                data-v-69271fcc=""
              >
                <li
                  class="tab-head tab-head--active"
                  data-v-69271fcc=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-69271fcc=""
                    style="all: unset;"
                  >
                    General
                  </div>
                </li>
                <li
                  class="tab-head"
                  data-v-69271fcc=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-69271fcc=""
                    style="all: unset;"
                  >
                    Body Translation
                  </div>
                </li>
              </ul>
            </header>
            <main
              class="tab-body"
              data-v-69271fcc=""
            >
              <div
                class="tab-panel"
                data-v-69271fcc=""
              />
            </main>
          </div>
        </div>
      </div>
      <div
        class="content"
      >
        <div>
          <div
            data-spec="translation-container"
          >
            <div
              class="translate_from"
              data-spec="text-to-translate"
            >
              New Sign Up
            </div>
          </div>
          <div>
            <div
              class="completion_wrapper"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-text-area sm normal textarea"
                  data-passed-props="[object Object]"
                  data-testid="Subject"
                  data-v-2f3d79bf=""
                >
                  <!---->
                  <textarea
                    data-v-2f3d79bf=""
                    placeholder="English Translation"
                  />
                  <!---->
                  <!---->
                </div>
              </div>
              <div
                class="options_wrapper"
                data-testid="temba_completion_options_Subject"
                id=""
                style="margin-top: 1px; width: -24px; display: none;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--tertiary"
                  data-passed-props="[object Object]"
                  data-v-3b3aa28c=""
                  style="margin-left: 0px; margin-top: 0px; margin-right: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-3b3aa28c=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--primary"
                  data-passed-props="[object Object]"
                  data-v-3b3aa28c=""
                  style="margin-top: 0px; margin-right: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-3b3aa28c=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
